# PipeLight

./: README.md
Backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
Backend/app/: __init__.py  main.py
Backend/app/agents/: evaluator.py  non_devops.py  retriever.py  search.py  synthesizer.py  validator.py  workflow.py
Backend/app/api/: analytics.py  analytics_charts.py  auth.py  chat.py  docs.py  routes.py  users.py
Backend/app/core/: __init__.py  analytics.py  auth.py  config.py  database.py  logging.py  middleware.py  models.py  vector_store.py
Backend/app/llm/: llm.py
Backend/app/mcp/: __init__.py  google_mcp.py
Backend/app/state/: state.py  state_manager.py
Frontend/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/Analytics/: CardComponents.tsx  ChartComponents.tsx  UserHistoryView.tsx
Frontend/src/components/Chat/: AgentFlow.tsx  AgentTimeline.tsx  ChatInput.tsx  ChatMessages.tsx  Message.tsx  SourcesDisplay.tsx
Frontend/src/components/Common/: Button.tsx  Input.tsx  Modal.tsx  Toast.tsx
Frontend/src/components/Documents/: DocumentSearch.tsx  DocumentUpload.tsx
Frontend/src/components/Layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
Frontend/src/hooks/: useAnalytics.ts  useChat.ts  useDocuments.ts  useUserHistory.ts
Frontend/src/pages/: SettingsPage.tsx
Frontend/src/services/: api.ts  constants.ts  websocket.ts
Frontend/src/stores/: authStore.ts  chatStore.ts
Frontend/src/types/: chat.ts
(+5 files in other folders)
